# gretl

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.16  README.md  config.h.in  powersub
cephes/: polrt.c.new
cmake/Modules/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  CheckHeaders.cmake  FindCURL.cmake  FindFlite.cmake  FindGMP.cmake  FindGTK2.cmake  FindGTK3.cmake  FindGettext.cmake  FindGtksourceview2.cmake  FindGtksourceview3.cmake  FindLATEX.cmake  FindMsgfmt.cmake  FindR.cmake  FindStandardMathLibrary.cmake  MacroListOperations.cmake  OptimizeForArchitecture.cmake  TestBigEndian.cmake  TestEndianess.c.in  TestSignalType.c.in  TestSignalType.cmake  UseLATEX.cmake
cmake/gtest/: CMakeLists.txt
cmake/testu01/: CMakeLists.txt
doc/: Doxyfile.in  conf.py  conf.py.in  index.rst  index.rst.in
doc/include/: acknowledgements.rst  data_formats.rst  features.rst  quick_start.rst
doc/tex/: extract_scripts  tag  tagit
etc/osx/: README.tex
etc/share/: genrgui.hlp  genrgui.hlp.it  genrgui.hlp.pt  gretlcli.hlp  gretlgui.hlp  gretlgui.hlp.pt  gretlhelp.refs
include/gretl/cephes/: mconf.h
include/gretl/dcmt/: dci.h
include/gretl/gui2/: arrows.h  callbacks.h  clipboard.h  cmdstack.h  console.h  database.h  datafiles.h  dialogs.h  dlgutils.h  filelists.h  fileselect.h  filters.h  fncall.h  fnsave.h  fontfilter.h  gppoints.h  gpt_control.h  gpt_dialog.h  graph_page.h  graphics.h  gretl.h  gretl_enums.h  gretl_ipc.h  gretltypes.h  gretlwin32.h  gtkfontselhack.h  gui_recode.h  gui_utils.h  guiprint.h  helpfiles.h  lagpref.h  library.h  menustate.h  model_table.h  objectsave.h  obsbutton.h  selector.h  series_view.h  session.h  session_typedefs.h  (+11 more)
include/gretl/lib/: clapack_double.h  cmd_private.h  compare.h  compat.h  csvdata.h  dataio.h  estimate.h  genmain.h  genparse.h  gretl_errors.h  gretl_func.h  gretl_matrix.h  gretl_model.h  gretl_prn.h  gretl_utils.h  johansen.h  laginfo.h  libgretl.h  libset.h  matrix_extra.h  matrix_simd.h  missing_private.h  modelprint.h  monte_carlo.h  nls.h  nlspec.h  nonparam.h  objstack.h  options.h  plotspec.h  printout.h  printscan.h  pvalues.h  qr_estimate.h  random.h  strutils.h  subsample.h  system.h  texprint.h  transforms.h  (+6 more)
include/gretl/plugin/: arbond.h  arma_common.h  audio.h  audioprint.h  biff.h  import_common.h  importer.h
include/gretl/plugin/zipunzip/: zunz_private.h
include/gretl/rng/: SFMT.h
lang/: CMakeLists.txt  ca.gmo  cs.gmo  es.gmo  eu.gmo  fr.gmo  gl.gmo  it.gmo  ja.gmo  pt.gmo  ru.gmo  rw.gmo  sq.gmo
lib/src/: swap_bytes.h
plugin/: stata_import.c
po/: bg.gmo  de.gmo  el.gmo  pl.gmo  pt_BR.gmo  stract.sh  tr.gmo  zh_TW.gmo
share/: gretlcli.hlp.it  gretlcli.hlp.pt  gretlcmd.hlp  gretlcmd.hlp.it  gretlcmd.hlp.pt  gretlgui.hlp.it
share/gretl/: genrcli.hlp  genrcli.hlp.it  genrcli.hlp.pt
share/gretl/scripts/: ps10-7.inp
share/scripts/: ps10-11.inp
src/cephes/: airy.c  bdtr.c  btdtr.c  cbrt.c  chdtr.c  const.c  expx2.c  fdtr.c  gamma.c  gdtr.c  hyp2f1.c  hyperg.c  i0.c  i1.c  igam.c  igami.c  incbet.c  incbi.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  kv.c  mtherr.c  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  polrt.c  polrt.c.new  psi.c  stdtr.c  struve.c  unity.c  yn.c
src/cli/: complete.c  gretlcli-mpi.c
src/dcmt/: check32.c  eqdeg.c  genmtrand.c  mt19937.c  prescr.c  seive.c
src/executables/: gretl_gui.c  gretlcli.c  mklang.c  mknews.c
src/extra/: arma_example.c  nls_example.c  simple_client.c
src/gui2/: about.c  calculator.c  callbacks.c  clipboard.c  cmdstack.c  console.c  database.c  datafiles.c  datawiz.c  dialogs.c  dlgutils.c  filelists.c  fileselect.c  filters.c  fncall.c  fnsave.c  fontfilter.c  gpt_control.c  gpt_dialog.c  graph_page.c  graphics.c  gretl.c  gretl_ipc.c  gretlwin32.c  gtkfontselhack.c  gui_recode.c  gui_utils.c  guiprint.c  helpfiles.c  lagpref.c  library.c  menustate.c  model_table.c  objectsave.c  obsbutton.c  selector.c  series_view.c  session.c  session_xml.c  settings.c  (+10 more)
src/lib/: adf_kpss.c  bhhh_max.c  bootstrap.c  boxplots.c  calendar.c  compare.c  compat.c  csvdata.c  dataio.c  dataset.c  dbread.c  dbwrite.c  describe.c  discrete.c  estimate.c  flow_control.c  forecast.c  geneval.c  genfuncs.c  genlex.c  genmain.c  gensyntax.c  gmm.c  graphing.c  gretl_bfgs.c  gretl_bundle.c  gretl_commands.c  gretl_data_io.c  gretl_errors.c  gretl_fft.c  gretl_foreign.c  gretl_func.c  gretl_intl.c  gretl_list.c  gretl_matrix.c  gretl_model.c  gretl_mpi.c  gretl_panel.c  gretl_paths.c  gretl_prn.c  (+41 more)
src/minpack/: chkder.c  enorm.c  fdjac2.c  lmder.c  lmder1.c  lmdif.c  lmpar.c  qrfac.c  qrsolv.c
src/plugin/: anova.c  arbond.c  arma.c  arma_cml.c  arma_common.c  arma_init.c  arma_x12.c  audio.c  audioprint.c  biprobit.c  dpanel.c  duration.c  eviews_import.c  excel_import.c  fcp.c  fiml.c  fractals.c  garch.c  gnumeric_import.c  gretlzip.c  heckit.c  import_common.c  interpolate.c  interval.c  jalpha.c  jmulti_import.c  johansen.c  jrestrict.c  kernel.c  leverage.c  liml.c  mailer.c  midi_utils.c  mod_garch.c  mp_ols.c  odbc_import.c  ods_import.c  panurc.c  pca.c  poisson.c  (+15 more)
src/plugin/libole2/: ms-ole.c
src/plugin/mpack/: encode.c  md5c.c
src/plugin/rq/: rqfnb.c
src/plugin/zipunzip/: zfileio.c  zipfile.c  zipmain.c  zipwork.c  zsystem.c
src/rng/: SFMT.c
test/: nistcheck.c
test/gtests/: gretl_matrix_test.cpp
test/nist/: nistcheck.c
test/nist-nls/: get_data.sh  nist-nls-test.c  run_tests.sh
test/rng/: gretltest.c
tools/ci/linux/: after_success.sh  before_install.sh  install.sh  script.sh
tools/ci/osx/: after_success.sh  before_install.sh  before_script.sh  install.sh  script.sh
